--- a/todolist.html
+++ b/todolist.html
@@ -18,6 +18,7 @@
         <ul id="todo-list">
         </ul>
     </div>
+    <input type = "text">
 
     <script>
         const todoForm = document.getElementById('todo-form');
@@ -60,4 +61,5 @@
     </script>
 </body>
 </html>
+
 
