--- a/todolist.html
+++ b/todolist.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List -example</title>
+    <title>To-Do List</title>
     
 </head>
 <body>
@@ -61,6 +61,7 @@
     </script>
 </body>
 </html>
+
 
 
 
